Initial clean commit without personal paths

--- a/python_model/churn_prediction_pipeline.ipynb
+++ b/python_model/churn_prediction_pipeline.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Churn Prediction Model\n",
     "\n",
-    "This notebook uses Python to predict which customers are likely to churn.  \n",
-    "It includes data cleaning, model training, evaluation, and a simple explanation of the results.\n"
+    "This notebook uses Python to predict which customers are likely to churn.\n",
+    "It demonstrates data cleaning, model training, and performance evaluation, with clear metrics and visual outputs."
    ]
   },
   {
