--- a/python_model/churn_prediction_pipeline.ipynb
+++ b/python_model/churn_prediction_pipeline.ipynb
@@ -8,7 +8,7 @@
     "# Churn Prediction Model\n",
     "\n",
     "This notebook uses Python to predict which customers are likely to churn.\n",
-    "It demonstrates data cleaning, model training, and performance evaluation, with clear metrics and visual outputs."
+    "It covers data cleaning, model training, and performance evaluation, with metrics and visual outputs."
    ]
   },
   {
